# prediction-app-dll

./: CMakeLists.txt  How to build a cmake project.txt  buy_data_generator.mq5  cmakemake.cmd  example-app.cpp  multi_rnn_model.py  multi_rnn_test.py  prediction-app.cpp  pytorch_dll_test.mq5  rnn_buy_data_gen.mq5  rnn_model.pth  rnn_model.py  rnn_model_test.py  rnn_trend_data_gen.mq5  v1Buy.mqh  v1_BB_Asset_Optimizer.mq5  v1_BB_Engine.mqh  v1_multi.mq5
